--- a/about.css
+++ b/about.css
@@ -31,7 +31,7 @@ header {
 
 .main-head {
     max-width: 680px;
-    animation: 2.5s slide-down ease-in-out;
+    animation: 1.5s slide-down ease-in-out;
 }
 
 @keyframes slide-down {
@@ -102,17 +102,27 @@ header {
         background-color: var(--background-color);
         padding: 10px;
         border-radius: 10px;
-        display: none;
         z-index: 100;
     }
 
-    .head .menu:hover .submenu {
+    button {
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+        font-size: 15px;
+        color: var(--font);
+        font-weight: bold;
+    }
+
+    .hidden {
+        display: none;
+    }
+
+    .show {
         display: block;
     }
 
-    #submenu0::before {
-        left:165px;
-    }
+
 
     .submenu li {
         list-style: none;
@@ -127,6 +137,7 @@ header {
         text-transform: capitalize;
     }
 
+
     .submenu::before{
         content: "";
         border-left: 6px solid transparent;
@@ -139,29 +150,29 @@ header {
         top: -6px;
     }
 
+    .submenu0::before {
+        left:165px;
+    }
+
     .head > li {
         padding: 10px 15px;
     }
 
-    .head > li a {
+    .head > li a,button {
         display: inline-block;
         position: relative;
         font-weight: bold;
         color: var(--font);
         transition: color ease-in-out;
         animation-name: fede-in;
-        animation-duration: 1.2s;
-        animation-delay: 1.8s;
+        animation-duration: 0.5s;
+        animation-delay: 1s;
         animation-fill-mode: backwards;
         animation-timing-function: ease-in;
     }
 
     .head .menu a i {
         font-size: 15px;
-    }
-
-    .head li a#active {
-        color: var(--color1);
     }
 
     .head .btnn:hover {
@@ -179,7 +190,7 @@ header {
     }
 
 
-    .head li a::after {
+    .head li a::after,button::after {
         content: "";
         position: absolute;
         bottom: 0;
@@ -190,8 +201,12 @@ header {
         transition: 0.15s ease-in-out;
     }
 
-    .head li a:hover:after {
+    .head li a:hover:after,button:hover::after {
         width: 100%;
+    }
+
+    .head li a#active {
+        color: var(--color1);
     }
 
     .open-menu,
@@ -234,7 +249,7 @@ header {
     background-image: radial-gradient(circle 250px at left, #0D2626 100%, transparent);
     z-index: -2;
     animation-name: circle;
-    animation-duration: 2.5s;
+    animation-duration: 1.5s;
     animation-fill-mode: both;
     animation-timing-function: ease-in-out;
 }
@@ -261,8 +276,7 @@ header {
     position: relative;
     display: inline-block;
     animation-name: about-slide;
-    animation-duration: 2s;
-    animation-delay: 1s;
+    animation-duration: 1s;
     animation-fill-mode: both;
     animation-timing-function: ease-out;
 }
@@ -289,8 +303,8 @@ header {
     background-color: var(--text);
     transition: 0.15s ease-in-out;
     animation-name: about-slide-after;
-    animation-duration: 2s;
-    animation-delay: 2s;
+    animation-duration: 1s;
+    animation-delay: .5s;
     animation-fill-mode: both;
 }
 
@@ -318,8 +332,7 @@ header {
     padding-top: 4px;
     font-size: 18px;
     animation-name: about-slide-p;
-    animation-duration: 2s;
-    animation-delay: 1.5s;
+    animation-duration: .5s;
     animation-fill-mode: both;
 }
 
@@ -343,8 +356,8 @@ p {
     padding-left: 80px;
     width: 80%;
     animation-name: story-slide;
-    animation-duration: 2.5s;
-    animation-delay: 2s;
+    animation-duration: 2s;
+    animation-delay: 1s;
     animation-fill-mode: both;
     animation-timing-function: ease-out;
 }
@@ -390,7 +403,7 @@ p {
     translate: 0 0;
     transition: all 0.3s ease-in-out;
     animation-name: slide-from-bottom;
-    animation-duration: 2s;
+    animation-duration: 1s;
     animation-delay: 1s;
     animation-fill-mode: backwards;
 }
