--- a/aigeneration.css
+++ b/aigeneration.css
@@ -102,17 +102,27 @@ header {
         background-color: var(--background-color);
         padding: 10px;
         border-radius: 10px;
-        display: none;
         z-index: 100;
     }
 
-    .head .menu:hover .submenu {
+    button {
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+        font-size: 15px;
+        color: var(--font);
+        font-weight: bold;
+    }
+
+    .hidden {
+        display: none;
+    }
+
+    .show {
         display: block;
     }
 
-    #submenu0::before {
-        left:165px;
-    }
+
 
     .submenu li {
         list-style: none;
@@ -127,6 +137,7 @@ header {
         text-transform: capitalize;
     }
 
+
     .submenu::before{
         content: "";
         border-left: 6px solid transparent;
@@ -139,11 +150,15 @@ header {
         top: -6px;
     }
 
+    .submenu0::before {
+        left:165px;
+    }
+
     .head > li {
         padding: 10px 15px;
     }
 
-    .head > li a {
+    .head > li a,button {
         display: inline-block;
         position: relative;
         font-weight: bold;
@@ -175,7 +190,7 @@ header {
     }
 
 
-    .head li a::after {
+    .head li a::after,button::after {
         content: "";
         position: absolute;
         bottom: 0;
@@ -186,7 +201,7 @@ header {
         transition: 0.15s ease-in-out;
     }
 
-    .head li a:hover:after {
+    .head li a:hover:after,button:hover::after {
         width: 100%;
     }
 
