--- a/Interactive-Media-Products.css
+++ b/Interactive-Media-Products.css
@@ -319,6 +319,7 @@ header {
 
     .grid-text p {
         height: 250px;
+        line-height: 25px;
         overflow: auto;
     }
     
@@ -364,6 +365,7 @@ header {
 
     .WHAT-I-LEARNED > p {
         margin: 30px 11%;
+        line-height: 29px;
         font-size: 20px;
         height: 300px;
         overflow: auto;
@@ -437,7 +439,6 @@ header {
     .flex-image img {
         cursor: pointer;
         border: solid 3px var(--color1);
-        object-fit: cover;
     }
 
     .flex-image img:hover {
