--- a/Projects.css
+++ b/Projects.css
@@ -593,7 +593,41 @@ header {
         padding: 0 10%;
         gap: 40px;
     }
+
+    .contact-info {
+        display: flex;
+        justify-content: center;
+        align-self: center;
+        width: 50%;
+    }
     
+    .contact-info2 {
+        display: flex;
+        text-align: left;
+        justify-content: center;
+        align-self: center;
+        flex-direction: column;
+    }
+
+    .contact11 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 0;
+    }
+
+    .contact-info2 > li > a > i {
+        padding-right: 10px;
+    }
+    
+    .contact-info2 > li > i {
+        padding-right: 10px;
+    }
+
+    .contact11 h3 {
+        padding-right: 75px;
+    }
+
     .footer-brand,
     .footer-section {
         border-bottom: 1px solid #2b2b2b;
