--- a/Branding.css
+++ b/Branding.css
@@ -754,7 +754,41 @@ header {
         padding: 0 10%;
         gap: 40px;
     }
+
+    .contact-info {
+        display: flex;
+        justify-content: center;
+        align-self: center;
+        width: 50%;
+    }
     
+    .contact-info2 {
+        display: flex;
+        text-align: left;
+        justify-content: center;
+        align-self: center;
+        flex-direction: column;
+    }
+
+    .contact11 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 0;
+    }
+
+    .contact-info2 > li > a > i {
+        padding-right: 10px;
+    }
+    
+    .contact-info2 > li > i {
+        padding-right: 10px;
+    }
+
+    .contact11 h3 {
+        padding-right: 75px;
+    }
+
     .footer-brand,
     .footer-section {
         border-bottom: 1px solid #2b2b2b;
@@ -765,7 +799,7 @@ header {
     
     .footer-brand h2 {
         font-size: 1.8rem;
-        margin-top: 50px;
+            margin-top: 50px;
         margin-bottom: 10px;
         color: var(--color1);
     }
@@ -826,7 +860,6 @@ header {
         font-size: 0.9rem;
         color: #888;
     }
-    
 /* responsive design for mobile */
 @media screen and (max-width: 600px) {
 
