--- a/Interactive-Media-Products.css
+++ b/Interactive-Media-Products.css
@@ -105,7 +105,7 @@ header {
         z-index: 100;
     }
 
-    button {
+    .btnn {
         border: none;
         background-color: transparent;
         cursor: pointer;
@@ -158,7 +158,7 @@ header {
         padding: 10px 15px;
     }
 
-    .head > li a,button {
+    .head > li a,.btnn {
         display: inline-block;
         position: relative;
         font-weight: bold;
@@ -190,7 +190,7 @@ header {
     }
 
 
-    .head li a::after,button::after {
+    .head li a::after,.btnn::after {
         content: "";
         position: absolute;
         bottom: 0;
@@ -201,7 +201,7 @@ header {
         transition: 0.15s ease-in-out;
     }
 
-    .head li a:hover:after,button:hover::after {
+    .head li a:hover:after,.btnn:hover::after {
         width: 100%;
     }
 
@@ -694,6 +694,28 @@ header {
         color: #888;
     }
     
+/* scroll to top */
+#scroll-to-top {
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    background-color: var(--color1);
+    color: var(--font);
+    font-size: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    border: none;
+    display: none;
+    transition: all 0.3s ease-in-out;
+}
+
+#scroll-to-top:hover {
+    background-color: #006666;
+    transform: scale(1.1);
+    box-shadow: 0 0 10px var(--color1);
+}
 /* ------------------------------------------------------------------ */
 /* mobile responsive */
 @media (max-width: 600px) {
