--- a/Branding.css
+++ b/Branding.css
@@ -418,6 +418,7 @@ header {
 
     .branding p {
         color: var(--font);
+        line-height: 25px;
         font-weight: 500;
         height: 220px;
         overflow: auto;
