--- a/Learning outcomes.css
+++ b/Learning outcomes.css
@@ -585,7 +585,7 @@ header {
     }
     
     .site-footer {
-        background: #050B0D;
+        background: var(--color);
         color: #eee;
         font-family: 'Ubuntu', sans-serif;
         width: 100%;
@@ -637,7 +637,7 @@ header {
 
     .footer-brand,
     .footer-section {
-        border-bottom: 1px solid #2b2b2b;
+        border-bottom: 1px solid #68686895;
         padding-bottom: 25px;
         width: 100%;
         max-width: 800px;
@@ -652,7 +652,7 @@ header {
     
     .footer-brand p {
         font-size: 0.95rem;
-        color: #aaa;
+        color: #ffffff;
         margin-bottom: 15px;
     }
     
@@ -701,7 +701,7 @@ header {
     }
     
     .footer-bottom {
-        background-color: #050B0D;
+        background-color: var(--color);
         padding: 20px 10px;
         font-size: 0.9rem;
         color: #888;
